# encodecmae

./: README.md  requirements.txt  setup.cfg  start_docker.sh
encodecmae/: Dockerfile  __init__.py  docker-compose.yml  hub.py
encodecmae/configs/: imports
encodecmae/configs/base/: create_selftraining_dataset.gin  create_st_dataset.gin  self-train.gin  unsupervised_pretrain.gin
encodecmae/configs/datasets/: audioset-unbalanced-24k.gin  fma-large-24k.gin  librilight-6k-24k.gin
encodecmae/configs/features/: mel.gin  st.gin  wav_only.gin
encodecmae/configs/models/: encodecmae.gin  selftrain_8q_weight_by_variance.gin
encodecmae/heareval_model/: encodecmae.py
encodecmae/models/: __init__.py  mae.py
encodecmae/models/encoders/: __init__.py
encodecmae/models/heads/: __init__.py
encodecmae/models/losses/: __init__.py
encodecmae/models/masks/: __init__.py
encodecmae/models/targets/: __init__.py
encodecmae/models/transformers/: __init__.py
encodecmae/scripts/: run_pretraining.sh
encodecmae/tasks/: __init__.py
encodecmae/tasks/data/: __init__.py
encodecmae/tasks/features/: __init__.py
encodecmae/tasks/models/: __init__.py
encodecmae/tasks/models/encodecmae/: encoders.py  heads.py  mae.py  masking.py  targets.py
encodecmae/tasks/models/transformers/: __init__.py
encodecmae/tasks/utils/: __init__.py
