[metadata]
name = encodecmae
version = 0.0.1
author = Leonardo Pepino
author_email = lpepino@dc.uba.ar
description = EnCodecMAE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
packages = encodecmae
python_requires = >=3.6
install_requires = 
    huggingface_hub
    encodec==0.1.1
    torch>=2.0.0
    pytorch_lightning>=2.0.0
    ginpipe
    librosa
    torchinfo
    pandas

    
